# pybiomes

./: .gitmodules  README.md  example.py  main.c  out  pyproject.toml
examples/: 83salt.py  get_structure_config.py  multiprocessing_village_search.py  mushroom_fields_at_spawn.py  outposts_at_spawn.py  ruined_portal_variants.py
src/: bind.c  pybiomes.c
src/modules/: biomes.c  dimensions.c  structures.c  versions.c
src/objects/: finder.c  generator.c  position.c  range.c  rng.c
